--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #222;
   padding: 20px;
   color: #fff;
-  background-image: url(./images/world-war-z-zombie-hordes-game-uhdpaper.com-4K-2.jpg);
+  background-image: url(https://github.com/Yokai140303/Zombie-Game/blob/main/images/11ae18fb9c5e9c64e2e35decf9fe6f6a.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
